# q3improved

./: .gitignore  CMakeLists.txt  COPYING.txt
cmake/: Q3Platform.cmake
code/: CMakeLists.txt
code/botlib/: CMakeLists.txt  be_aas_file.c
code/cgame/: CMakeLists.txt
code/client/: cl_cgame.c  cl_cin.c  cl_main.c  cl_net_chan.c  cl_ui.c  snd_adpcm.c  snd_dma.c  snd_local.h  snd_mem.c
code/game/: CMakeLists.txt  botlib.h  q_shared.c  q_shared.h
code/jpeg-6/: CMakeLists.txt
code/q3_ui/: CMakeLists.txt  ui_sppostgame.c
code/qcommon/: cm_load.c  cm_patch.c  cm_polylib.c  cm_test.c  cmd.c  common.c  files.c  md4.c  msg.c  qcommon.h  unzip.c  vm.c  vm_interpreted.c  vm_local.h
code/renderer/: qgl.h  qgl_stubs.c  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_font.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_mesh.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shader.c  tr_sky.c  vk_image.c  vk_init.c  vk_local.h  vk_pipeline.c  vk_shade.c
code/renderer/shaders/: generic.frag  generic.vert
code/server/: sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c
code/splines/: CMakeLists.txt
code/ui/: CMakeLists.txt
code/unix/: linux_common.c  linux_glimp.c  linux_local.h  linux_qgl.c  linux_snd.c  unix_main.c  unix_net.c  unix_shared.c  vm_x86.c
